Bug 1326141 - Make .collapse property affect height computation. r=MattN
MozReview-Commit-ID: BE5U8iKhYsO

UltraBlame original commit: 9bbe2c180655a60ec5e5c94791200c3fca37435e

--- a/browser/extensions/formautofill/content/formautofill.css
+++ b/browser/extensions/formautofill/content/formautofill.css
@@ -67,6 +67,34 @@ listitem
 }
 #
 PopupAutoComplete
+>
+richlistbox
+>
+richlistitem
+[
+originaltype
+=
+"
+autofill
+-
+profile
+"
+]
+[
+collapsed
+=
+"
+true
+"
+]
+{
+display
+:
+none
+;
+}
+#
+PopupAutoComplete
 [
 firstresultstyle
 =
